prost-reflect/tests/snapshots/main__option_resolution18.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "cannot set field for option '(a)' value of type 'repeated Foo'"
related: []
severity: error

