prost-reflect/tests/snapshots/main__option_resolution24.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - messageType:
      - field:
          - jsonName: doubleValue
            name: double_value
            number: 1
        name: FieldDescriptorProto
    name: test.proto

