prost-reflect/tests/snapshots/main__option_unknown_extension.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "option field '(an.extension)' is not defined"
related: []
severity: error

